feat: implement enhanced AI voice system with professional-grade capabilities
🎯 Major Features Added:
- Deepgram integration for superior speech-to-text (95%+ accuracy)
- ElevenLabs integration for high-quality voice synthesis
- Fallback system to Twilio for reliability
- Voice management dashboard at /admin/voice-settings
- Comprehensive voice testing and analytics

🔧 Technical Implementation:
- lib/deepgram-client.ts: Deepgram SDK integration with Nova-2 model
- lib/elevenlabs-client.ts: ElevenLabs API for voice synthesis
- lib/enhanced-voice-agent.ts: Main voice processing agent
- lib/custom-voice-agent.ts: Modular voice agent architecture
- lib/openai-voice-agent.ts: OpenAI Voice API integration (future)

📊 Admin Dashboard:
- app/admin/voice-settings/page.tsx: Complete voice management UI
- Voice testing interface with real-time audio playback
- Settings configuration for speech recognition and synthesis
- Analytics dashboard for call performance monitoring
- Voice library management with custom voice creation

🔌 API Endpoints:
- /api/admin/voice-config/*: Voice configuration management
- /api/admin/voice-config/voices: Get available voices
- /api/admin/voice-config/analytics: Call analytics
- /api/admin/voice-config/test: Voice synthesis testing
- /api/admin/voice-config/settings: Settings management

🔄 Enhanced Voice Processing:
- Updated app/api/voice/route.ts with enhanced agent integration
- Automatic fallback to Twilio if enhanced services fail
- Improved SMS formatting with booking links
- Better error handling and logging

📦 Dependencies:
- Added @deepgram/sdk@^4.11.2 for speech recognition
- Updated package.json with new voice dependencies

📚 Documentation:
- VOICE_SYSTEM_README.md: Comprehensive setup and usage guide
- Updated env.template with new voice service variables
- Updated TODO.md with voice system completion status

💰 Cost Analysis:
- Current: ~/bin/zsh.01/minute (Twilio + OpenAI)
- Enhanced: ~/bin/zsh.014/minute (40% increase for superior qu

--- a/env.template
+++ b/env.template
@@ -14,6 +14,23 @@ TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
 TWILIO_PHONE_NUMBER=your_twilio_phone_number_here
 TWILIO_WEBHOOK_URL=https://your-domain.com/api/voice
 
+# Voice AI Services (Optional - for enhanced voice features)
+# ElevenLabs for high-quality voice synthesis
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+
+# Deepgram for real-time speech-to-text
+DEEPGRAM_API_KEY=your_deepgram_api_key_here
+
+# AssemblyAI for advanced speech processing
+ASSEMBLYAI_API_KEY=your_assemblyai_api_key_here
+
+# Azure Cognitive Services for speech
+AZURE_SPEECH_KEY=your_azure_speech_key_here
+AZURE_SPEECH_REGION=eastus
+
+# Google Cloud Text-to-Speech
+GOOGLE_APPLICATION_CREDENTIALS=path/to/your/google-credentials.json
+
 # Business Contact Information (Optional)
 # Your business phone number for display on the website
 NEXT_PUBLIC_BUSINESS_PHONE=+1234567890
