--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "tailwindcss-animate": "^1.0.7",
     "twilio": "latest",
     "vaul": "latest",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@deepgram/sdk": "^4.11.2"
   },
   "devDependencies": {
     "@types/node": "^22",
