updated the dropdown menu and added an invest page

--- a/env.template
+++ b/env.template
@@ -26,6 +26,11 @@ AZURE_SPEECH_REGION=eastus
 # Google Cloud Text-to-Speech
 GOOGLE_APPLICATION_CREDENTIALS=path/to/your/google-credentials.json
 
+# Stripe Configuration (Required for investment features)
+# Get these from your Stripe dashboard at https://dashboard.stripe.com/
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+
 # Business Contact Information (Optional)
 # Your business phone number for display on the website
 NEXT_PUBLIC_BUSINESS_PHONE=+1234567890
