made changes to the booking so that a visitor can pay to book or they can pay a certain amount as discussed with management. added a sms with the stripe webhook for notifications. updated the invest page

--- a/env.template
+++ b/env.template
@@ -26,15 +26,22 @@ AZURE_SPEECH_REGION=eastus
 # Google Cloud Text-to-Speech
 GOOGLE_APPLICATION_CREDENTIALS=path/to/your/google-credentials.json
 
-# Stripe Configuration (Required for investment features)
+# Stripe Configuration (Required for investment and booking features)
 # Get these from your Stripe dashboard at https://dashboard.stripe.com/
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+# Live keys for finance@readyaimgo.biz
+STRIPE_SECRET_KEY=sk_live_your_live_stripe_secret_key_here
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_live_your_live_stripe_publishable_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret_here
 
-# Business Contact Information (Optional)
-# Your business phone number for display on the website
-NEXT_PUBLIC_BUSINESS_PHONE=+1234567890
-BUSINESS_OWNER_PHONE=+1234567890
+# Email-to-SMS Gateway Configuration (Required for notifications)
+# Uses Gmail SMTP to send SMS via carrier gateways (free alternative to Twilio)
+SMTP_USER=finance@readyaimgo.biz
+SMTP_PASS=your_email_app_password_here
+
+# SMS Recipients (carrier gateways)
+# AT&T: @txt.att.net, Verizon: @vtext.com, T-Mobile: @tmomail.net
+ADMIN_SMS_EMAIL=4049739860@txt.att.net
+COUSIN_SMS_EMAIL=yourcousin@example.com
 
 # Notes:
 # - Variables starting with NEXT_PUBLIC_ are exposed to the browser
