--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "nodemailer": "^7.0.9",
     "openai": "^4.67.3",
     "react": "^19",
     "react-day-picker": "latest",
