--- a/env.template
+++ b/env.template
@@ -33,6 +33,18 @@ STRIPE_SECRET_KEY=sk_live_your_live_stripe_secret_key_here
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_live_your_live_stripe_publishable_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret_here
 
+# Firebase Configuration (Required for authentication)
+# Get these from your Firebase Console at https://console.firebase.google.com/
+NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key_here
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
+NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id_here
+FIREBASE_ADMIN_PROJECT_ID=your-project-id
+FIREBASE_ADMIN_PRIVATE_KEY=your_private_key_here
+FIREBASE_ADMIN_CLIENT_EMAIL=your-admin@your-project.iam.gserviceaccount.com
+
 # Email-to-SMS Gateway Configuration (Required for notifications)
 # Uses Gmail SMTP to send SMS via carrier gateways (free alternative to Twilio)
 SMTP_USER=finance@readyaimgo.biz
