--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^11.1.0",
+    "firebase-admin": "^13.2.0",
     "@deepgram/sdk": "^4.11.2",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "latest",
