feat: refresh marketing content and booking flow

--- a/env.template
+++ b/env.template
@@ -55,6 +55,12 @@ SMTP_PASS=your_email_app_password_here
 ADMIN_SMS_EMAIL=4049739860@txt.att.net
 COUSIN_SMS_EMAIL=yourcousin@example.com
 
+# Insurance Provider Configuration
+# Options: "wheelbase" | "lula" | "turo" | "none"
+# Set to "none" to disable insurance provider integration
+INSURANCE_PROVIDER=none
+WHEELBASE_OWNER_ID=4321962
+
 # Notes:
 # - Variables starting with NEXT_PUBLIC_ are exposed to the browser
 # - Variables without NEXT_PUBLIC_ are only available on the server
