--- a/env.template
+++ b/env.template
@@ -45,10 +45,24 @@ FIREBASE_ADMIN_PROJECT_ID=your-project-id
 FIREBASE_ADMIN_PRIVATE_KEY=your_private_key_here
 FIREBASE_ADMIN_CLIENT_EMAIL=your-admin@your-project.iam.gserviceaccount.com
 
-# Email-to-SMS Gateway Configuration (Required for notifications)
-# Uses Gmail SMTP to send SMS via carrier gateways (free alternative to Twilio)
+# Email Configuration (Required for admin invitations and notifications)
+# Supports Zoho Mail (recommended) or Gmail SMTP
+# For Zoho Mail:
+SMTP_HOST=smtp.zoho.com
+SMTP_PORT=465
+SMTP_SECURE=true
 SMTP_USER=finance@readyaimgo.biz
-SMTP_PASS=your_email_app_password_here
+SMTP_PASS=your_zoho_app_password_here
+EMAIL_FROM="Femi Leasing Admin <finance@readyaimgo.biz>"
+NEXT_PUBLIC_ADMIN_INVITE_URL=https://femileasing.com/admin/accept-invite
+
+# For Gmail (alternative):
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=465
+# SMTP_SECURE=true
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your_gmail_app_password_here
+# EMAIL_FROM="Femi Leasing Admin <your-email@gmail.com>"
 
 # SMS Recipients (carrier gateways)
 # AT&T: @txt.att.net, Verizon: @vtext.com, T-Mobile: @tmomail.net
@@ -60,6 +74,11 @@ COUSIN_SMS_EMAIL=yourcousin@example.com
 # Set to "none" to disable insurance provider integration
 INSURANCE_PROVIDER=none
 WHEELBASE_OWNER_ID=4321962
+
+# Google Maps API (Optional - for distance calculation in booking form)
+# Get this from https://console.cloud.google.com/google/maps-apis
+# Enable "Distance Matrix API" and "Geocoding API"
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
 # Notes:
 # - Variables starting with NEXT_PUBLIC_ are exposed to the browser
